--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ ext {
     support_version = "27.1.1"
     exoplayer_version = "2.7.0"
     anko_version = "0.10.4"
+    play_services_version = "16.0.1"
 }
 
 dependencies {
@@ -75,7 +76,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.anko:anko:$anko_version"
 
-    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     annotationProcessor 'dk.ilios:realmfieldnameshelper:1.1.1'
     implementation 'io.realm:android-adapters:2.1.0'
     implementation 'com.nshmura:recyclertablayout:1.5.0'
