--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         def uniqueAppId = "androidprojectkeshav"
 
         applicationId "com.example.keshavanarasappa.androidproject"
         minSdkVersion 26
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,7 +39,7 @@ androidExtensions {
 
 ext {
     room_version = "1.1.1"
-    support_version = "27.1.1"
+    support_version = "28.0.0"
     exoplayer_version = "2.7.0"
     anko_version = "0.10.4"
     play_services_version = "16.0.1"
@@ -48,6 +48,7 @@ ext {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:support-v13:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support:palette-v7:$support_version"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
@@ -64,7 +65,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
 
-    implementation 'com.android.support:support-v13:27.1.1'
     testImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.loopj.android:android-async-http:1.4.4'
     implementation 'com.squareup.picasso:picasso:2.5.2'
