--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation "com.android.support:support-v13:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support:palette-v7:$support_version"
-    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation "com.android.support.constraint:constraint-layout:2.0.0-alpha2"
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:support-v4:$support_version"
@@ -77,7 +77,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
 
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    annotationProcessor 'dk.ilios:realmfieldnameshelper:1.1.1'
+    kapt 'dk.ilios:realmfieldnameshelper:1.1.1'
     implementation 'io.realm:android-adapters:2.1.0'
     implementation 'com.nshmura:recyclertablayout:1.5.0'
 
@@ -96,6 +96,7 @@ dependencies {
     implementation 'info.androidhive:imagefilters:1.0.7'
     implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation'com.romandanylyk:pageindicatorview:1.0.2'
 }
 
 repositories {
