--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -172,6 +172,8 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/android_app_widget_info" />
         </receiver>
+
+        <activity android:name=".motionlayout.MotionLayoutActivity"></activity>
     </application>
 
 </manifest>
